backend/src/main/k8s/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: podcast-server
  labels:
    app: podcast-server
spec:
  ports:
    - name: http-podcast-server-port
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: podcast-server
    module: backend
    serving: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podcast-server
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      run: podcast-server
      app: podcast-server
      serving: "true"
  template:
    metadata:
      labels:
        run: podcast-server
        app: podcast-server
        module: backend
        serving: "true"
    spec:
      containers:
        - image: podcastserver/backend:master
          imagePullPolicy: Always
          name: app
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
