backend/src/main/k8s/base/fs.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs
  labels:
    app: fs
spec:
  ports:
    - name: http-fs-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: fs
    serving: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      run: fs
      app: fs
      serving: "true"
  template:
    metadata:
      labels:
        run: fs
        app: fs
        module: backend
        serving: "true"
    spec:
      containers:
        - image: podcastserver/file-system:latest
          imagePullPolicy: Always
          name: fs
          ports:
            - name: http-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: podcasts-files
              mountPath: /var/www/podcast-server-files/data
      volumes:
        - name: podcasts-files
          hostPath:
            path: /opt/podcast-server/files/
            type: Directory
